packages/java/src/main/resources/natives/macos-arm64/include/xberg.h


typedef struct XBERGChunkingConfig XBERGChunkingConfig;
typedef struct XBERGCitation XBERGCitation;
typedef struct XBERGClassificationLabel XBERGClassificationLabel;
typedef struct XBERGContentFilterConfig XBERGContentFilterConfig;
typedef struct XBERGDiffOptions XBERGDiffOptions;
typedef struct XBERGDocumentBoundary XBERGDocumentBoundary;
typedef struct XBERGDocumentStructure XBERGDocumentStructure;
typedef struct XBERGEmbeddingConfig XBERGEmbeddingConfig;
typedef struct XBERGEntity XBERGEntity;
typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractionConfidence XBERGExtractionConfidence;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGExtractionDiff XBERGExtractionDiff;
typedef struct XBERGExtractionResult XBERGExtractionResult;
typedef struct XBERGFootnoteAnchor XBERGFootnoteAnchor;
typedef struct XBERGFootnoteConfig XBERGFootnoteConfig;
typedef struct XBERGFootnoteDefinition XBERGFootnoteDefinition;
typedef struct XBERGHeuristicsConfig XBERGHeuristicsConfig;
typedef struct XBERGHierarchyConfig XBERGHierarchyConfig;
typedef struct XBERGHtmlOutputConfig XBERGHtmlOutputConfig;
typedef struct XBERGImageExtractionConfig XBERGImageExtractionConfig;
typedef struct XBERGImagePreprocessingConfig XBERGImagePreprocessingConfig;
typedef struct XBERGKeyword XBERGKeyword;
typedef struct XBERGKeywordConfig XBERGKeywordConfig;
typedef struct XBERGLanguageDetectionConfig XBERGLanguageDetectionConfig;
typedef struct XBERGRerankerConfig XBERGRerankerConfig;
typedef struct XBERGSchemaCompliance XBERGSchemaCompliance;
typedef struct XBERGServerConfig XBERGServerConfig;
typedef struct XBERGTranslationConfig XBERGTranslationConfig;
char *xberg_content_filter_config_to_json(const XBERGContentFilterConfig *ptr);
void xberg_content_filter_config_free(XBERGContentFilterConfig *ptr);
char *xberg_extraction_config_to_json(const XBERGExtractionConfig *ptr);
char *xberg_extract_input_to_json(const XBERGExtractInput *ptr);
char *xberg_extraction_result_to_json(const XBERGExtractionResult *ptr);
char *xberg_image_extraction_config_to_json(const XBERGImageExtractionConfig *ptr);
void xberg_image_extraction_config_free(XBERGImageExtractionConfig *ptr);
char *xberg_language_detection_config_to_json(const XBERGLanguageDetectionConfig *ptr);
void xberg_language_detection_config_free(XBERGLanguageDetectionConfig *ptr);
char *xberg_html_output_config_to_json(const XBERGHtmlOutputConfig *ptr);
void xberg_html_output_config_free(XBERGHtmlOutputConfig *ptr);
char *xberg_hierarchy_config_to_json(const XBERGHierarchyConfig *ptr);
void xberg_hierarchy_config_free(XBERGHierarchyConfig *ptr);
char *xberg_chunking_config_to_json(const XBERGChunkingConfig *ptr);
char *xberg_embedding_config_to_json(const XBERGEmbeddingConfig *ptr);
XBERGRerankerConfig *xberg_reranker_config_from_json(const char *json);
void xberg_reranker_config_free(XBERGRerankerConfig *ptr);
XBERGTranslationConfig *xberg_translation_config_from_json(const char *json);
void xberg_translation_config_free(XBERGTranslationConfig *ptr);
XBERGServerConfig *xberg_server_config_from_json(const char *json);
void xberg_server_config_free(XBERGServerConfig *ptr);
char *xberg_footnote_config_to_json(const XBERGFootnoteConfig *ptr);
char *xberg_footnote_anchor_to_json(const XBERGFootnoteAnchor *ptr);
void xberg_footnote_anchor_free(XBERGFootnoteAnchor *ptr);
char *xberg_footnote_definition_to_json(const XBERGFootnoteDefinition *ptr);
void xberg_footnote_definition_free(XBERGFootnoteDefinition *ptr);
char *xberg_citation_to_json(const XBERGCitation *ptr);
void xberg_citation_free(XBERGCitation *ptr);
char *xberg_classification_label_to_json(const XBERGClassificationLabel *ptr);
void xberg_classification_label_free(XBERGClassificationLabel *ptr);
char *xberg_document_structure_to_json(const XBERGDocumentStructure *ptr);
char *xberg_entity_to_json(const XBERGEntity *ptr);
void xberg_entity_free(XBERGEntity *ptr);
char *xberg_image_preprocessing_config_to_json(const XBERGImagePreprocessingConfig *ptr);
void xberg_image_preprocessing_config_free(XBERGImagePreprocessingConfig *ptr);
char *xberg_diff_options_to_json(const XBERGDiffOptions *ptr);
char *xberg_extraction_diff_to_json(const XBERGExtractionDiff *ptr);
void xberg_extraction_diff_free(XBERGExtractionDiff *ptr);
char *xberg_keyword_config_to_json(const XBERGKeywordConfig *ptr);
char *xberg_keyword_to_json(const XBERGKeyword *ptr);
void xberg_keyword_free(XBERGKeyword *ptr);
char *xberg_extraction_confidence_to_json(const XBERGExtractionConfidence *ptr);
void xberg_extraction_confidence_free(XBERGExtractionConfidence *ptr);
char *xberg_heuristics_config_to_json(const XBERGHeuristicsConfig *ptr);
char *xberg_document_boundary_to_json(const XBERGDocumentBoundary *ptr);
void xberg_document_boundary_free(XBERGDocumentBoundary *ptr);
void xberg_schema_compliance_free(XBERGSchemaCompliance *ptr);