packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_region_kind_from_json")]
    internal static extern IntPtr RegionKindFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_region_kind_free")]
    internal static extern void RegionKindFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_config_from_json")]
    internal static extern IntPtr RerankerConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_config_free")]
    internal static extern void RerankerConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_schema_compliance_from_json")]
    internal static extern IntPtr SchemaComplianceFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_schema_compliance_free")]
    internal static extern void SchemaComplianceFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_from_json")]
    internal static extern IntPtr ServerConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_free")]
    internal static extern void ServerConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_input_from_json")]
    internal static extern IntPtr StructuredInputFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_input_free")]
    internal static extern void StructuredInputFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_thresholds_from_json")]
    internal static extern IntPtr StructuredThresholdsFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_thresholds_free")]
    internal static extern void StructuredThresholdsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_translation_config_from_json")]
    internal static extern IntPtr TranslationConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_translation_config_free")]
    internal static extern void TranslationConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_plan_to_json")]
    internal static extern IntPtr ChunkPlanToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_config_to_json")]
    internal static extern IntPtr ChunkingConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_result_to_json")]
    internal static extern IntPtr ChunkingResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_result_free")]
    internal static extern void ChunkingResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_citation_to_json")]
    internal static extern IntPtr CitationToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_citation_free")]
    internal static extern void CitationFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_classification_label_to_json")]
    internal static extern IntPtr ClassificationLabelToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_classification_label_free")]
    internal static extern void ClassificationLabelFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_signals_to_json")]
    internal static extern IntPtr ConfidenceSignalsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_weights_to_json")]
    internal static extern IntPtr ConfidenceWeightsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_content_filter_config_to_json")]
    internal static extern IntPtr ContentFilterConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_content_filter_config_free")]
    internal static extern void ContentFilterConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_diff_options_to_json")]
    internal static extern IntPtr DiffOptionsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_boundary_to_json")]
    internal static extern IntPtr DocumentBoundaryToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_boundary_free")]
    internal static extern void DocumentBoundaryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_to_json")]
    internal static extern IntPtr DocumentStructureToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_config_to_json")]
    internal static extern IntPtr EmbeddingConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_preset_to_json")]
    internal static extern IntPtr EmbeddingPresetToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_preset_free")]
    internal static extern void EmbeddingPresetFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_entity_to_json")]
    internal static extern IntPtr EntityToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_entity_free")]
    internal static extern void EntityFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_to_json")]
    internal static extern IntPtr ExtractInputToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_confidence_to_json")]
    internal static extern IntPtr ExtractionConfidenceToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_confidence_free")]
    internal static extern void ExtractionConfidenceFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_to_json")]
    internal static extern IntPtr ExtractionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_diff_to_json")]
    internal static extern IntPtr ExtractionDiffToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_diff_free")]
    internal static extern void ExtractionDiffFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_output_to_json")]
    internal static extern IntPtr ExtractionOutputToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_output_free")]
    internal static extern void ExtractionOutputFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_to_json")]
    internal static extern IntPtr ExtractionResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_anchor_to_json")]
    internal static extern IntPtr FootnoteAnchorToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_anchor_free")]
    internal static extern void FootnoteAnchorFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_to_json")]
    internal static extern IntPtr FootnoteConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_definition_to_json")]
    internal static extern IntPtr FootnoteDefinitionToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_definition_free")]
    internal static extern void FootnoteDefinitionFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_to_json")]
    internal static extern IntPtr HeuristicsConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_hierarchy_config_to_json")]
    internal static extern IntPtr HierarchyConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_hierarchy_config_free")]
    internal static extern void HierarchyConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_html_output_config_to_json")]
    internal static extern IntPtr HtmlOutputConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_html_output_config_free")]
    internal static extern void HtmlOutputConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_extraction_config_to_json")]
    internal static extern IntPtr ImageExtractionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_extraction_config_free")]
    internal static extern void ImageExtractionConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_preprocessing_config_to_json")]
    internal static extern IntPtr ImagePreprocessingConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_preprocessing_config_free")]
    internal static extern void ImagePreprocessingConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_to_json")]
    internal static extern IntPtr KeywordToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_free")]
    internal static extern void KeywordFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_config_to_json")]
    internal static extern IntPtr KeywordConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_language_detection_config_to_json")]
    internal static extern IntPtr LanguageDetectionConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_language_detection_config_free")]
    internal static extern void LanguageDetectionConfigFree(IntPtr ptr);
